[gd_scene load_steps=4 format=3 uid="uid://b28xem6or1ob0"]

[ext_resource type="Script" uid="uid://dmlsmn2stauwx" path="res://Scripts/SpaceLevel/Space.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ccq25nemo7t7j" path="res://Assets/Backgrounds/Space/space.dds" id="2"]
[ext_resource type="Texture2D" uid="uid://drh7xt34lbp7u" path="res://Assets/Backgrounds/Space/space2.dds" id="3"]

[node name="SpaceAnimation" type="Node2D"]
script = ExtResource("1")

[node name="space_texture1" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 2

[node name="space_texture2" type="TextureRect" parent="."]
offset_left = 1024.0
offset_right = 2048.0
offset_bottom = 600.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(512, 300)
scale = Vector2(51.2, 30)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
